[package]
name = "inscribe-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"

[dev-dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.18"

[lib]
proc-macro = true
